# all_nba_prediction

./: main.py  prediciton_2026.json  pyproject.toml
dataset/: awards.csv  final_ml_dataset.csv
dataset/raw/: 1991-92_dataset.csv  1996-97.csv  1997-98.csv  1998-99.csv  1999-00.csv  2000-01.csv  2001-02.csv  2002-03.csv  2003-04.csv  2004-05.csv  2005-06.csv  2006-07.csv  2007-08.csv  2008-09.csv  2009-10.csv  2010-11.csv  2011-12.csv  2012-13.csv  2013-14.csv  2014-15.csv  2015-16.csv  2016-17.csv  2017-18.csv  2018-19.csv  2019-20.csv  2020-21.csv  2021-22.csv  2022-23.csv  2023-24.csv  2024-25.csv  2025-26.csv
dataset/tables/: all_nba_1990.csv  all_nba_1990_rookie.csv  all_nba_1990_rookie.html  all_nba_1991.csv  all_nba_1991.html  all_nba_1991_rookie.csv  all_nba_1992.csv  all_nba_1992_rookie.csv  all_nba_1993.csv  all_nba_1993.html  all_nba_1993_rookie.csv  all_nba_1994.csv  all_nba_1994.html  all_nba_1994_rookie.csv  all_nba_1994_rookie.html  all_nba_1995.csv  all_nba_1995_rookie.csv  all_nba_1996.csv  all_nba_1996_rookie.csv  all_nba_1996_rookie.html  all_nba_1997.csv  all_nba_1997_rookie.csv  all_nba_1998.csv  all_nba_1998_rookie.csv  all_nba_1998_rookie.html  all_nba_1999.csv  all_nba_1999_rookie.csv  all_nba_1999_rookie.html  all_nba_2000.csv  (+87 more)
dataset_old/: players.csv  players_stats.csv
report/: build_report.sh  report.html  report.md  style.css
results/: experiments_results.json
src/: analysis.R  analysis2.R  experiments.py  final_run.py  get_data.py  get_data2.py  model.py  pipelines.py  preprocessing.R  process_html_tables.py  utils.py
(+117 files in other folders)
